# GlDemo

./: CMakeLists.txt
includes/: filesystem.h  shader_m.h
includes/glad/: glad.h
src/: glad.c
src/camera/: camera_circle.cpp
src/triangle/: triangle.cpp
